euphony/static/css/style.css
body {
  background-color: #b4b4bc;
}

.music {
  padding-top: 3%;
  height: 25%;
  width: 25%;
  padding-right: 4%;
}

.icon-play {
  background-size: cover;
  display: inline-block;
  margin-right: 10px;
}

.navbar_added_item {
  margin-left: 10px;
}

#logo {
  text-align: center;
}

.hero {
  position: fixed;
  top: 0;
  left: 0;

  min-width: 100%;
  min-height: 100%;
  background-image: linear-gradient(to bottom right, #552586, #B589D6);
}

.title {
  color: white;
  padding-top: 0%;
  font-size: larger;
}

.info {
  color: white;
  padding-top: 2%;
}

.search_btn {
  border-color: #CC94F2 !important;
  color: #CC94F2 !important;
}

.search_btn:hover {
  background-color: #CC94F2;
  border-color: #CC94F2;
  color: white !important;
}

.btn_drop {
  background-color: #CC94F2 !important;
}

.btn_logged {
  background-color: #CC94F2 !important;
}

.profile-image-thumbnail {
  height: 48px;
  width: 48px;
}

.hello-msg {
  font-size: 18px;
  color: #fff;
  margin-right: 20px;
}

.navbar-title {
  font-size: 22px;
  color: #fff;
  margin-right: 20px;
}

.navbar-item {
  font-size: 18px;
  color: #fff;
  margin-right: 20px;
}

.user_card {
  width: 350px;
  margin-top: auto;
  margin-bottom: auto;
  background: #90A19D;
  position: relative;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 5px;

}

.form_container {
  margin-top: 20px;
}

#form-title {
  color: #fff;
}

.login_btn {
  width: 100%;
  background: #CC94F2 !important;
  color: white !important;
}

.login_btn:focus {
  box-shadow: none !important;
  outline: 0px !important;
}

.login_container {
  padding: 0 2rem;
}

.input-group-text {
  background: #B65CF2 !important;
  color: white !important;
  border: 0 !important;
  border-radius: 0.25rem 0 0 0.25rem !important;
}

.input_user,
.input_pass:focus {
  box-shadow: none !important;
  outline: 0px !important;
}

#messages {
  background-color: grey;
  color: #fff;
  padding: 10px;
  margin-top: 10px;
}

.login_register {
  margin: 0;
  padding: 0;
  height: 100%;
  background: #363432 !important;
}

.addsong_button {
  float: right;
  color: white;
}

.addsong_iframe {
  border-radius: 12px
}

.addsong_table {
  background-color: whitesmoke;
}

.playlist_button_text {
  color: white;
}

.playlist_table {
  background-color: whitesmoke;
}

.album_info_card {
  width: 40rem;
}

.album_info_iframe {
  border-radius: 12px
}

.dropdown-menu {
  max-height: 280px;
  overflow-y: auto;
}

.topchart_iframe {
  border-radius: 12px
}

.createplaylist_newplaylist_text {
  color: black;
}

.songinfo_iframe {
  border-radius: 12px
}

.navbarcolor {
  background-color: #3B3B3B;
}

.navbar_serach_button_spacing {
  padding-right: 8px;
}

.navbar_items {
  font-weight: bold;
  font-size: 20px;
}

.addsong_button {
  float: right;
}

.addsongs_iframe {
  border-radius: 12px
}

.dash_card {
  width: 40rem;
}

.dash_iframe {
  border-radius: 12px
}

.songinfo_iframe {
  border-radius: 12px
}

.comments {
  background-color: transparent;
  border: none;
}

.spotify_container2 {
  margin: 0 auto;
  width: 70%;
  height: 70%;
  position: relative;
}

.spotify_embeded {
  width: 370px;
  height: 450px;
}

.song_info_tags {
  font-weight: bold;
  text-align: ceter;
  margin-bottom: 0px;
}

.song_info_album a {
  color: red;
  text-decoration: none;
  font-weight: bold;
}


.song_infos {
  font-size: 20px;
  font-family: Comic Sans MS, Comic Sans, cursive;
}

.songinfo_container {
  float: left;
  left: 0;
  width: 50%;
  text-align: center;
  /*background-color: grey;*/
}

.comments_div {
  vertical-align: top;
  float: left;
  width: 49.2%;
  /*background-color: green; */
}

.comments_section {
  overflow-y: auto;
  height: 280px;
  outline: 3px solid #383838;
  border-radius: 5px;
}

.comment_form_section {}

.comments_text {
  padding-top: 3px;
}

.comments_total {
  padding-bottom: 5px;
}

.like_dislike_buttons {
  margin: 0 auto;
}

.like_button {
  display: inline-block;
  padding-right: 30px;
}

.dislike_button {
  display: inline-block;
}

.album_info_tags {
  font-weight: bold;
  text-align: ceter;
  margin-bottom: 0px;
}

.album_info_album a {
  color: red;
  text-decoration: none;
  font-weight: bold;
}


.album_infos {
  font-size: 20px;
  font-family: Comic Sans MS, Comic Sans, cursive;
}


.album_image {
  outline: 5px solid grey;
}

.album_like_dislike_buttons {
  margin: 0 auto;
  padding-top: 20px;
  padding-bottom: 20px;
}

.no_like{
  display: inline-block;
  width: 105px;
  height: 54px;
  padding-right: 30px;
}

.no_dislike{
  display: inline-block;
  width: 95px;
  height: 54px;
}

.albuminfo_container {
  padding-top: 20px;
  float: left;
  left: 0;
  width: 50%;
  text-align: center;
}

.albuminfo_card {
  margin: 0 auto;
  width: 70%;
  text-align: center;
  outline: 3px solid grey;
  background-color: darkgrey;
}

.album_comments_section {
  overflow-y: auto;
  height: 380px;
  outline: 3px solid #383838;
  border-radius: 5px;
}

.track_list {
  margin: 0 auto;
  padding-top: 10px;
  width: 60%;
}

#track_list_song {}

.tracklist_spacing {
  padding-bottom: 5px;
}

.track_list_song_div {
  color: darkred;
  text-decoration: none;
  font-weight: bold;
  outline: 1px solid grey;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
  border-radius: 15px;
  padding-left: 6px;
  padding-right: 6px;
}

.track_list_song_div_number {
  float: left;
}

.track_list_song_div_name {
  float: none;
}

.track_list_song_div_time {
  float: right;
}

.search_results {
  padding-bottom: 20px;
  display: flex;
  justify-content: center;
}

.search_results_text {
  text-align: center;
  font-weight: bold;
  font-size: 30px;
}
/* ... */

